--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/head": "^2.0.0",
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "sweetalert2": "^11.22.3",
