--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sweetalert2": "^11.22.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
+    "vue-i18n": "^11.1.11",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5"
   },
