--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/head": "^2.0.0",
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
+    "qrcode": "^1.5.4",
     "sweetalert2": "^11.22.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
